implemented filters for selecting players from teams owned

--- a/game/static/game/css/sidebar-style.css
+++ b/game/static/game/css/sidebar-style.css
@@ -1,7 +1,7 @@
 .sidenav {
     height:100%;
     width: 300px;
-    position: fixed;
+    position:sticky;
     z-index: 1;
     left: 0;
     background-color: #111;
@@ -32,7 +32,7 @@
     color: #f1f1f1;
 }
 .main {
-    margin-left: 200px; /* Same as the width of the sidenav */
+    margin-left: 300px; /* Same as the width of the sidenav */
 }
 
 @media screen and (max-height: 450px) {
