--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -5,7 +5,7 @@
   <a href="{% url 'games_home' request.user.username %}">Games</a>
   <a href="{% url 'displayteams' request.user.username %}">Teams</a>
   <a href="#">Profile</a>
-  <a href="#">Implementing</a>
+  <a href="#">Settings</a>
 </div>
 {% endblock %}
 
