--- a/game/templates/game/base.html
+++ b/game/templates/game/base.html
@@ -11,13 +11,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'homepage/css/bootstrap.min.css' %}" />
     <link rel="stylesheet" href="{% static 'game/css/sidebar-style.css' %}" />
+    <link rel="stylesheet" href="{% static 'game/css/game-page.css' %}" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
   </head>
   <body>
-    HTML  CSS   Result
-  Edit on
   <nav class="navbar navbar-inverse navbar-static-top">
     <div class="container">
       <div class="navbar-header">
@@ -33,7 +32,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           {% if user.is_authenticated %}
-            <li><a href="{% url 'logout' %}">logout</a></li>
+            <li><a href="{% url 'logout' %}">Logout</a></li>
           {% else %}
             <li><a href="{% url 'login' %}">Login</a></li>
             <li><a href="{% url 'signup' %}">Sign Up</a></li>
@@ -46,9 +45,12 @@
   <div class="fluid-container">
     <div class="row">
       <div class="col-sm-3">
-        {% block left-bar %}
-        {% endblock %}
+          {% block left-bar %}
+          {% endblock %}
+          <div id="colored-block">
+          </div>
       </div>
+
       <div class="col-sm-6 text-center">
         <div class="row">
           <div class="col-sm-12">
