--- a/game/templates/game/game_home.html
+++ b/game/templates/game/game_home.html
@@ -10,5 +10,6 @@
 {% endblock %}
 
 {% block content %}
-  <h2>Your games {{ user.get_full_name }} <small>{{ user.username }}</small>!</h2>
+  <h2>Your game page is on the road to completion.</h2><br>
+  <span class="glyphicon glyphicon-road" style="font-size:220px"></span>
 {% endblock %}
