--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -10,5 +10,6 @@
 {% endblock %}
 
 {% block content %}
-  <h2>Your homepage is under construction.</h2>
+  <h2>Your homepage is on the road to completion.</h2><br>
+  <span class="glyphicon glyphicon-road" style="font-size:220px"></span>
 {% endblock %}
