--- a/user/templates/user/base.html
+++ b/user/templates/user/base.html
@@ -6,7 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
+    <title>DraftBois</title>
+    <link rel="shortcut icon" href="{% static 'homepage/favicon.ico' %}" />
+    <link rel="icon" href="{% static 'homepage/favicon.ico' %}" type="image/ico" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'homepage/css/bootstrap.min.css' %}" />
@@ -18,8 +20,6 @@
     <![endif]-->
   </head>
   <body>
-    HTML  CSS   Result
-  Edit on
   <nav class="navbar navbar-inverse navbar-static-top">
     <div class="container">
       <div class="navbar-header">
