--- a/user/templates/user/signup.html
+++ b/user/templates/user/signup.html
@@ -7,15 +7,15 @@
     {% for field in form %}
       <p>
         {{ field.label_tag }}<br>
-        {{ field }}
+        <font style="color:black">{{ field }}</font>
         {% if field.help_text %}
-          <small style="color: grey"></small>
+          <small style="color: black"></small>
         {% endif %}
         {% for error in field.errors %}
           <p style="color: red">{{ error }}</p>
         {% endfor %}
       </p>
     {% endfor %}
-    <button type="submit">Sign up</button>
+    <button type="submit"><font style="color:black">Sign up</font></button>
   </form>
 {% endblock %}
